--- a/cms_helper/static/ruscon/css/style.css
+++ b/cms_helper/static/ruscon/css/style.css
@@ -52,3 +52,11 @@ body {
 #news {
 	margin-top: -3px;
 }
+
+.clear-list li{
+	padding-top: 10px;
+}
+
+.clear-list li:first-child{
+	padding-top: 0;
+}
