--- a/gcsgroupwww/templates/zinnia/entry_list.html
+++ b/gcsgroupwww/templates/zinnia/entry_list.html
@@ -52,7 +52,9 @@
 
 {% block content-pagination %}
 {% if is_paginated %}
+<div class="pagination">
   {% zinnia_pagination page_obj %}
+</div>
 {% endif %}
 {% endblock %}
 
