--- a/gcsgroupwww/templates/zinnia/_entry_detail.html
+++ b/gcsgroupwww/templates/zinnia/_entry_detail.html
@@ -12,10 +12,10 @@
 {% if object.image %}
 {% load thumbnail %}
 
-<div class="entry-image">
+<div class="entry-image pull-left">
 	<div>		
 		{% if continue_reading %}
-		 <a href="{{ object.get_absolute_url }}" title="{{ object.title }}" rel="lightbox[{{ object.pk }}]">
+		 <a class="thumbnail" href="{{ object.get_absolute_url }}" title="{{ object.title }}" rel="lightbox[{{ object.pk }}]">
 			<img src="{% thumbnail object.image '160x120' crop='smart' %}" alt="{{ object.title }}" class="left" /> 
 		</a>
 		{% else %}	
