--- a/cms_helper/static/ruscon/css/style.css
+++ b/cms_helper/static/ruscon/css/style.css
@@ -22,12 +22,13 @@ body {
 
 .dotblue {
 	/*background: url(../images/dotblue.png) #215e9a;*/
-	background: #215e9a;
+	/*background: #215e9a;*/
+	background: #eee;
 }
 
 #header-image {
-	padding: 12px 12px 8px;
-	width: 763px;
+	padding: 7px 7px 1px 7px;
+	width: 763px;	
 }
 
 #sidebar {
@@ -72,15 +73,20 @@ body {
 #header-right {
 	width: 380px;
 	text-align: center;
-	padding-top: 23px;
-	color: white;
+	/*color: white;*/
+	padding-top: 130px;
 }
 
 #header-right h1 {
-	font-size: 30px;	
+	font-size: 32px;	
+}
+
+#header-right h5 {
+	font-size: 20px;
+	font-style: italic;
 }
 
 #slide-wrapper {
 	overflow: hidden;
-	background: #215e9a;	
+	/*background: #215e9a;*/	
 }
