--- a/gcsgroupwww/templates/base.html
+++ b/gcsgroupwww/templates/base.html
@@ -77,6 +77,39 @@
 			<footer>
 				<p class="muted">
 					{% get_copyright '2000' %}	{% show_placeholder "get-copyright" "global_placeholder" %}
+					<br>
+					<!-- Yandex.Metrika informer -->
+					<a href="http://metrika.yandex.ru/stat/?id=23080864&amp;from=informer"
+					target="_blank" rel="nofollow"><img src="//bs.yandex.ru/informer/23080864/3_1_FFFFFFFF_EFEFEFFF_0_pageviews"
+					style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" onclick="try{Ya.Metrika.informer({i:this,id:23080864,lang:'ru'});return false}catch(e){}"/></a>
+					<!-- /Yandex.Metrika informer -->
+					
+					<!-- Yandex.Metrika counter -->
+					<script type="text/javascript">
+					(function (d, w, c) {
+					    (w[c] = w[c] || []).push(function() {
+					        try {
+					            w.yaCounter23080864 = new Ya.Metrika({id:23080864,
+					                    clickmap:true,
+					                    trackLinks:true,
+					                    accurateTrackBounce:true});
+					        } catch(e) { }
+					    });
+					
+					    var n = d.getElementsByTagName("script")[0],
+					        s = d.createElement("script"),
+					        f = function () { n.parentNode.insertBefore(s, n); };
+					    s.type = "text/javascript";
+					    s.async = true;
+					    s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
+					
+					    if (w.opera == "[object Opera]") {
+					        d.addEventListener("DOMContentLoaded", f, false);
+					    } else { f(); }
+					})(document, window, "yandex_metrika_callbacks");
+					</script>
+					<noscript><div><img src="//mc.yandex.ru/watch/23080864" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+					<!-- /Yandex.Metrika counter -->
 				</p>
 			</footer>
 		</div><!-- /container -->
