--- a/rdoc/templates/docplugin/marketlist.html
+++ b/rdoc/templates/docplugin/marketlist.html
@@ -3,10 +3,10 @@
 {% for object in entries %}
 <p>
 	<span class="label">{{ object.issue_date|date:"M. Y" }}</span>
-	<a href="http://{{ domain }}{{ MEDIA_URL }}{{ object.attachment }}" title="{{ object.title }}" rel="bookmark">{{ object.title }}</a>
+	<a href="{{ request.build_absolute_uri|slice:":-1" }}{{ MEDIA_URL }}{{ object.attachment }}" title="{{ object.title }}" rel="bookmark">{{ object.title }}</a>
 	
 	<a name="fb_share" type="button" 
-   	share_url="http://{{ domain }}{{ MEDIA_URL }}{{ object.attachment }}">Поделиться ссылкой</a> 
+   	share_url="{{ request.build_absolute_uri|slice:":-1" }}{{ MEDIA_URL }}{{ object.attachment }}">Поделиться ссылкой</a> 
 	<script src="http://static.ak.fbcdn.net/connect.php/js/FB.Share" 
         type="text/javascript">
 	</script>
