--- a/gcsgroupwww/templates/base.html
+++ b/gcsgroupwww/templates/base.html
@@ -25,7 +25,7 @@
 			<div class="row">
 				<div class="span10 header-image">
 					<p id="logo">
-						<img src="{{ STATIC_URL }}ruscon/images/logo-7.png">
+						<img src="{{ STATIC_URL }}ruscon/images/gcslogo.svg">
 					</p>
 				</div>
 				<div class="span2">
