--- a/cms_helper/static/ruscon/css/style.css
+++ b/cms_helper/static/ruscon/css/style.css
@@ -36,7 +36,7 @@ body {
 }
 
 #lang {
-	padding: 95px 0 0 0; 
+	padding: 15px 0 0 0; 
 }
 
 #lang a{
@@ -89,4 +89,10 @@ body {
 #slide-wrapper {
 	overflow: hidden;
 	/*background: #215e9a;*/	
+}
+
+.header-phones {
+	font-size: 14px;
+    list-style: None;     
+    margin-top: 20px;
 }
