--- a/cms_helper/static/ruscon/css/style.css
+++ b/cms_helper/static/ruscon/css/style.css
@@ -91,8 +91,11 @@ body {
 	/*background: #215e9a;*/	
 }
 
-.header-phones {
-	font-size: 14px;
-    list-style: None;     
+.header-phones{
+	font-size: 14px;         
     margin-top: 20px;
+}
+
+.header-phones ul li{	
+    list-style: None;   
 }
