--- a/gcsgroupwww/templates/base.html
+++ b/gcsgroupwww/templates/base.html
@@ -29,7 +29,7 @@
 					</p>
 				</div>
 				<div class="span3">
-					<div class="right header-phones">
+					<div class="header-phones">
 						<ul>
 							<li>+7 (495) 740-16-60 <label>Moscow</label></li>
 							<li>+7 (812) 335-00-20 <label>St.Petersburg</label></li>
