--- a/gcsgroupwww/templates/base.html
+++ b/gcsgroupwww/templates/base.html
@@ -29,11 +29,11 @@
 					</p>
 				</div>
 				<div class="span3">
-					<div class="header-phones">
+					<div class="header-phones right">
 						<ul>
-							<li>+7 (495) 740-16-60 <label>Moscow</label></li>
-							<li>+7 (812) 335-00-20 <label>St.Petersburg</label></li>
-							<li>+7 (8617) 676-037 <label>Novorossiysk</label></li>
+							<li>+7 (495) 740-16-60 <span class="label">Moscow</span></li>
+							<li>+7 (812) 335-00-20 <span class="label">St.Petersburg</span></li>
+							<li>+7 (8617) 676-037  <span class="label">Novorossiysk</span></li>
 						</ul>
 					</div>
 					<p id="lang" class="right">
