--- a/cms_helper/static/ruscon/css/style.css
+++ b/cms_helper/static/ruscon/css/style.css
@@ -94,6 +94,7 @@ body {
 .header-phones{
 	font-size: 14px;         
     margin-top: 20px;
+    font-weight: 700;    
 }
 
 .header-phones ul li label {
