--- a/gcsgroupwww/templates/base.html
+++ b/gcsgroupwww/templates/base.html
@@ -33,7 +33,7 @@
 						<ul>
 							<li>+7 (495) 740-16-60 <span class="label">Moscow</span></li>
 							<li>+7 (812) 335-00-20 <span class="label">St.Petersburg</span></li>
-							<li>+7 (8617) 676-037  <span class="label">Novorossiysk</span></li>
+							<li>+7 (8617) 676-037 &nbsp;<span class="label">Novorossiysk</span></li>
 						</ul>
 					</div>
 					<p id="lang" class="right">
