--- a/gcsgroupwww/templates/base.html
+++ b/gcsgroupwww/templates/base.html
@@ -12,7 +12,7 @@
 		<meta name="keywords" content="{% block meta-keywords %}{% page_attribute meta_keywords %}{% endblock %}"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="{{ STATIC_URL }}ruscon/css/bootstrap.min.css" rel="stylesheet" media="screen">
-		<link href="{{ STATIC_URL }}ruscon/css/style.css" rel="stylesheet" media="screen">
+		<link href="{{ STATIC_URL }}ruscon/css/style.css?0001" rel="stylesheet" media="screen">
 		<link href="{{ STATIC_URL }}ruscon/css/bootstrap-responsive.css" rel="stylesheet">
 		{% render_block "css" %}
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
